# MediaPlayer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_ZH.md
.github/workflows/: build.yml  release.yml
include/libcutils/: hook.h  libcutils.h  memory.h  string.h
include/libspng/: spng.c
include/lightbase/: plugin.h
include/littlehooker/: hashmap.h  littlehooker.h
include/mediaplayer/: LLPreLoaderAPI.h  command.h  config_handler.h  cpp_string.h  event_handler.h  file_utils.h  logger.h  music_player.h  plugin.h  process_png.h  video_player.h  window_player.h
include/mediaplayer/mc/: actor.h  block.h  item_stack.h  level.h  network.h  player.h  position.h  structs.h  symbols.h
include/mediaplayer/nbs/: nbs.h  parser.h  遠い空へ.h
include/miniz/: miniz.c
include/nbsparser/: nbsparser.c  nbsparser.h
include/xiziya_r/misc/: xr_dynamic_array.h
lib/: cutils.lib  libuv.lib  lightbase.lib  littlehooker.lib  minhook.x64.lib  nbsparser.lib
src/: FindSignatureModule.c  LLPreLoaderAPI.c  command.c  config_handler.c  cpp_string.c  dllmain.c  event_handler.c  file_utils.c  hashmap.c  littlehooker.c  logger.c  music_player.c  plugin.c  process_png.c  video_player.c  window_player.c
src/libspng/: spng.c
src/mc/: actor.c  block.c  item_stack.c  level.c  network.c  player.c
src/nbs/: parser.c
src/xiziya_r/misc/: xr_dynamic_array.c
test/config_handler/: test.txt  test_config_handle.c
tools/: convert.bat  convert.c  nbs2header.py  patchlib.py
